# SPACE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: BGFXConfig.cmake  Catch2Config.cmake  FLECSConfig.cmake  GLMConfig.cmake  IMGUIConfig.cmake  SFMLConfig.cmake  SOKOLConfig.cmake  SPDLOGConfig.cmake  embeded_shaders.cmake
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: gl.h  glad.h
dep/glad/src/: glad.c
engine/: CMakeLists.txt  bgfx.cpp  bgfx.hpp  config.cpp  config.hpp  config2.cpp  config2.hpp  cvar.cpp  cvar.hpp  filesystem.hpp  geometry.cpp  geometry.hpp  graphics-backend-bgfx.cpp  graphics-backend-bgfx.hpp  graphics-backend-sfml.cpp  graphics.cpp  graphics.hpp  main.cpp  noncopyable.hpp  setup_spdlog.hpp  transform.cpp  window-backend-sfml.cpp  window-backend-sfml.hpp  window.cpp  window.hpp
engine-entry/: CMakeLists.txt
engine-entry/src/: entry.cpp  imgui_style.hpp  sokol_gp.h
engine-entry/src/render/: components.cpp  observers.cpp  render.cpp  render.hpp  stages.cpp  systems.cpp
engine-old/: filesystem-backend-stdlib.cpp  filesystem.cpp  graphics-backend-sfml.cpp  graphics.hpp  imgui-backend-sfml.cpp  imgui-backend-sfml.hpp  imgui.cpp  imgui.hpp  transform.cpp  transform.hpp  window-backend-sfml.cpp  window-backend-sfml.hpp  window.hpp
engine-old/engine/: TemlatedStringLiteral.hpp  flecs_helpers.hpp  main.cpp  setup_spdlog.cpp
engine-old/graphics/: Color.hpp
engine-old/window/: Event.hpp  Keyboard.hpp
engine/bgfx/: BgfxLock.cpp  BgfxLock.hpp  bgfx_cvars.cpp  bgfx_cvars.hpp  cvars.cpp  cvars.hpp  internal_components.cpp  internal_components.hpp
engine/cvar/: define_helper.hpp  internal.hpp
engine/engine/: FlecsScopeGuard.hpp  flecs_helpers.cpp  flecs_helpers.hpp  iterator_range.hpp  main.cpp  test_stuff.cpp
engine/include/engine/: command.hpp  engine.hpp  flecs.hpp  log.hpp  reflection.hpp  world.hpp
engine/include/engine/debug/: imgui.hpp
engine/include/engine/graphics/: canvas.hpp  color.hpp  drawable.hpp  graphics.hpp
engine/include/engine/helpers/: noncopyable.hpp
engine/include/engine/lib/: assert.hpp  entry_consts.hpp  log.hpp  mat3_decompose.hpp
engine/include/engine/world/: graphics.hpp  spatial.hpp  transform.hpp  world-object.hpp  world.hpp
engine/modules/: filesystem-backend-stdlib.hpp  filesystem.hpp  glm-reflection.cpp  glm-reflection.hpp  graphics-backend-sfml.cpp  graphics-backend-sfml.hpp  graphics.cpp  graphics.hpp  opengl.cpp  opengl.hpp  transform.cpp  transform.hpp  window-backend-sfml.cpp  window-backend-sfml.hpp  window.cpp  window.hpp
engine/modules/graphics/: color-list.hpp
engine/modules/opengl/: GLContextLock.hpp
engine/modules/window/: FrameEventsStorage.hpp  Mouse.hpp
engine/src/: command.cpp  debug.cpp  debug.hpp  engine.cpp  graphics.cpp  graphics.hpp  log.cpp  modules.hpp  reflection.cpp
engine/src/internal-modules/: sokol-gfx.cpp  sokol-gfx.hpp
engine/src/world/: components.cpp  observers.cpp  systems.cpp  world.cpp
engine/src/world/spatial/: LooseQuadtree-impl.h  LooseQuadtree.h  SpatialSpace.cpp  SpatialSpace.hpp  TreeObject.cpp  TreeObject.hpp  bbox_calculation.cpp  bbox_calculation.hpp  component.hpp
engine/tests/: CMakeLists.txt
engine/tests/helpers/: helpers.hpp
engine/tests/world/: ApplyGlobalPosition.test.cpp  ApplyGlobalRotation.test.cpp  ApplyGlobalScale.test.cpp  InitGlobalPosition.test.cpp  delme.cpp
engine/window/: Event.hpp  FrameEventsStorage.hpp  Keyboard.hpp
game/: atmospherics.cpp  atmospherics.hpp  imgui-tools.hpp  main.cpp  powernet.cpp  powernet.hpp
resources/: shader.fs  shader.vs
shaders/: fs_test.sc  vs_test.sc
